--- a/javascript-http-sam/template.yaml
+++ b/javascript-http-sam/template.yaml
@@ -19,7 +19,7 @@ Parameters:
   CognitoStackName:
     Description: An environment name for Cognito stack
     Type: String
-    Default: serverless-api-cognio
+    Default: serverless-api-cognito
 
 Resources:
   LocationsFunction:
